@@ -190,6 +190,9 @@ $pusherParameters = array(
 // $oAuthClientSecret = '';
 // $oAuthRedirect = 'http://localhost:7001/Auth_Support/OAuthCatcher.php';
 
+/* SAML Support */
+$isSAML = true;
+
 /* Initial values for local context with their keys. */
 //$valuesForLocalContext = array(
 //    "pagetitle" => "INTER-Mediator samples",
