@@ -156,11 +156,11 @@ const INTERMediator_DBAdapter = {
     // 'use strict'
     let newRecordKeyValue = '', dbresult = '', resultCount = 0, totalCount = null, challenge = null, clientid = null,
       requireAuth = false, myRequest = null, changePasswordResult = null, mediatoken = null, appPath, authParams,
-      jsonObject, i, notifySupport = false, useNull = false, registeredID = '', alertBackup
+      jsonObject, i, /*notifySupport = false, */useNull = false, registeredID = '', alertBackup
     appPath = INTERMediatorOnPage.getEntryPath()
     authParams = INTERMediator_DBAdapter.generate_authParams()
     INTERMediator_DBAdapter.logging_comAction(debugMessageNumber, appPath, accessURL, authParams)
-    INTERMediatorOnPage.notifySupport = notifySupport
+    // INTERMediatorOnPage.notifySupport = notifySupport
     const promise = new Promise((resolve, reject) => {
       try {
         myRequest = new XMLHttpRequest()
@@ -198,7 +198,7 @@ const INTERMediator_DBAdapter = {
               newRecordKeyValue = jsonObject.newRecordKeyValue ? jsonObject.newRecordKeyValue : ''
               changePasswordResult = jsonObject.changePasswordResult ? jsonObject.changePasswordResult : null
               mediatoken = jsonObject.mediatoken ? jsonObject.mediatoken : null
-              notifySupport = jsonObject.notifySupport
+              //notifySupport = jsonObject.notifySupport
               alertBackup = INTERMediatorLog.errorMessageByAlert
               INTERMediatorLog.errorMessageByAlert = false
               for (i = 0; i < jsonObject.errorMessages.length; i++) {
@@ -262,7 +262,7 @@ const INTERMediator_DBAdapter = {
                 INTERMediatorOnPage.authCount = 0
               }
               INTERMediatorOnPage.storeCredentialsToCookieOrStorage()
-              INTERMediatorOnPage.notifySupport = notifySupport
+              //INTERMediatorOnPage.notifySupport = notifySupport
               if (successProc) {
                 successProc({
                   dbresult: dbresult,
