@@ -291,11 +291,7 @@ const IMLibPageNavigation = {
           if (!node.id) {
             node.id = INTERMediator.nextIdValue()
           }
-          IMLibMouseEventDispatch.setExecute(node.id,
-            function () {
-              INTERMediatorOnPage.logout()
-              location.reload()
-            })
+          IMLibMouseEventDispatch.setExecute(node.id, INTERMediatorOnPage.logoutScript)
         }
       }
     }
@@ -351,7 +347,7 @@ const IMLibPageNavigation = {
           INTERMediator_DBAdapter.db_createRecord_async(
             {name: targetNameCapt, dataset: []},
             async function (response) {
-              const  newId = response.newRecordKeyValue
+              const newId = response.newRecordKeyValue
               INTERMediatorOnPage.newRecordId = newId
               if (newId > -1) {
                 const restore = INTERMediator.additionalCondition
@@ -1284,7 +1280,7 @@ const IMLibPageNavigation = {
         if (masterEnclosure.tagName === 'TBODY') {
           masterEnclosure = masterEnclosure.parentNode
         }
-        if(masterEnclosure.style.display != 'none') {
+        if (masterEnclosure.style.display != 'none') {
           IMLibPageNavigation.masterNodeOriginalDisplay = masterEnclosure.style.display
           masterEnclosure.style.display = 'none'
         }
