@@ -91,6 +91,11 @@ let INTERMediatorOnPage = {
   syncBeforeDelete: null,
   syncAfterDelete: null,
 
+  logoutScript: function () {
+    INTERMediatorOnPage.logout()
+    location.reload()
+  },
+
   clearCredentials: function () {
     'use strict'
     INTERMediatorOnPage.authChallenge = null
@@ -664,13 +669,13 @@ let INTERMediatorOnPage = {
         let shaObj = new jsSHA('SHA-1', 'TEXT')
         shaObj.update(inputPassword + INTERMediatorOnPage.authUserSalt)
         let hash = shaObj.getHash('HEX')
-        shaObj = new jsSHA('SHA-256', 'TEXT', {"numRounds" : 5000})
+        shaObj = new jsSHA('SHA-256', 'TEXT', {"numRounds": 5000})
         shaObj.update(hash + INTERMediatorOnPage.authUserSalt)
         let hashNext = shaObj.getHash('HEX')
         INTERMediatorOnPage.authHashedPassword2m = hashNext + INTERMediatorOnPage.authUserHexSalt
       }
       if (INTERMediatorOnPage.passwordHash < 2.1) {
-        let shaObj = new jsSHA('SHA-256', 'TEXT', {"numRounds" : 5000})
+        let shaObj = new jsSHA('SHA-256', 'TEXT', {"numRounds": 5000})
         shaObj.update(inputPassword + INTERMediatorOnPage.authUserSalt)
         let hash = shaObj.getHash('HEX')
         INTERMediatorOnPage.authHashedPassword2 = hash + INTERMediatorOnPage.authUserHexSalt
